[package]
name = "ezomyte"
version = "0.1.0"
description = "Path of Exile API client"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]

[dependencies]
enum_derive = "0.1.7"
hyper = "0.11"
hyper-tls = "0.1"
lazy_static = "1.0"
macro-attr = "0.2.0"
newtype_derive = "0.1.6"
regex = "0.2.5"
separator = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1.10"
