[package]
name = "ezomyte"
version = "0.0.2"
description = "Path of Exile API client library"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
documentation = "https://docs.rs/ezomyte"
homepage = "https://github.com/Xion/ezomyte"
repository = "https://github.com/Xion/ezomyte"
keywords = ["poe", "path-of-exile", "api", "hyper"]
license = "MIT"
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
build = "build.rs"

[dependencies]
chrono = "0.4"
conv = "0.3"
derive-error = "0.0.4"
enum_derive = "0.1.7"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
itertools = "0.7"
lazy_static = "1.0"
log = "0.4.1"
macro-attr = "0.2.0"
maplit = "1.0"
newtype_derive = "0.1.6"
num = "0.1.41"
regex = "0.2.5"
separator = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1.10"

[dev-dependencies]
env_logger = "0.5"

[build-dependencies]
itertools = "0.7"
lazy_static = "1.0"
maplit = "1.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
