[package]
name = "ezomyte"
version = "0.0.2"
description = "Path of Exile API client library"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
documentation = "https://docs.rs/ezomyte"
homepage = "https://github.com/Xion/ezomyte"
repository = "https://github.com/Xion/ezomyte"
keywords = ["poe", "path-of-exile", "api", "hyper"]
license = "MIT"
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"
build = "build/main.rs"

[badges]
travis-ci = { repository = "Xion/ezomyte" }
maintenance = { status = "experimental" }

[features]
# Enables the mod database which is used to resolve item mod texts
# and extract the mod values.
# This is disabled by default because it increases memory usage by
# a couple dozen MB and needs a few seconds to initialize on first use.
mods_db = []


[dependencies]
chrono = "0.4"
conv = "0.3"
derive-error = "0.0.4"
derive_more = "0.10"
enum_derive = "0.1.7"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
itertools = "0.7"
lazy_static = "1.0"
log = "0.4.1"
macro-attr = "0.2.0"
newtype_derive = "0.1.6"
num = "0.1.41"
regex = "0.2.5"
separator = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
smallvec = "0.6"
tokio-core = "0.1.10"

[dev-dependencies]
env_logger = "0.5"

[build-dependencies]
itertools = "0.7"
lazy_static = "1.0"
maplit = "1.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"


[[example]]
name = "item_names"

[[example]]
name = "latest"

[[example]]
name = "league_rules"

[[example]]
name = "leagues"

[[example]]
name = "mod_values"
required-features = ["mods_db"]

[[example]]
name = "search_uniques"

[[example]]
name = "stash_from_json"
